# algo_lib

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  config.cmake.in
demo/: CMakeLists.txt  demo.cpp  demo_configure_build.sh  run_demo.sh
include/algo_lib/algorithm/: integer.hpp  sort.hpp
include/algo_lib/utils/: common.hpp  compare.hpp  output.hpp
include/cpp_lib/algorithm/: algorithm.hpp  integer.hpp  sort.hpp
include/cpp_lib/math/geometry/: geometry.hpp  mesh.hpp  triangle.hpp
include/cpp_lib/reimplement/: str.hpp  vector2d.hpp
include/cpp_lib/utils/: common.hpp  compare.hpp  output.hpp
scripts/: configure_build.sh  install.sh
src/: CMakeLists.txt
src/algorithm/: integer.cpp
src/math/geometry/: geometry.cpp  mesh.cpp
tests/: CMakeLists.txt
tests/test_algorithm/: test_integer.cpp  test_sort.cpp
tests/test_math/: test_geometry.cpp  test_mesh.cpp  test_triangle.cpp
tests/test_reimplement/: test_str.cpp  test_vector2d.cpp
tests/test_utils/: test_common.cpp  test_compare.cpp  test_output.cpp
