file(GLOB_RECURSE SRC "*.cpp")

add_library(${CPP_LIB} ${SRC})

target_include_directories(${CPP_LIB} PUBLIC 
    $<BUILD_INTERFACE:${CPP_LIB_PUBLIC_HEADER}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

find_package(Eigen3 3.4 REQUIRED NO_MODULE)
target_link_libraries(${CPP_LIB} Eigen3::Eigen)

set_property(TARGET ${CPP_LIB} PROPERTY VERSION ${PROJECT_VERSION})
set_property(TARGET ${CPP_LIB} PROPERTY SOVERSION ${PROJECT_VERSION_MAJOR})
set_property(TARGET ${CPP_LIB} PROPERTY INTERFACE_${CPP_LIB}_MAJOR_VERSION ${PROJECT_VERSION_MAJOR})
set_property(TARGET ${CPP_LIB} APPEND PROPERTY COMPATIBLE_INTERFACE_STRING ${CPP_LIB}_MAJOR_VERSION)

install(TARGETS ${CPP_LIB} 
    EXPORT ${CPP_LIB}Targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(DIRECTORY ${CPP_LIB_PUBLIC_HEADER}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(EXPORT ${CPP_LIB}Targets
    FILE ${CPP_LIB}Targets.cmake
    NAMESPACE ${CPP_LIB}::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${CPP_LIB}
)